--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,11 @@
         <input type="password" id="contrasenaLogin" placeholder="Contraseña">
         <button onclick="loginUsuario()">Ingresar</button>
         <div id="msgLogin" class="msg"></div>
+        <hr>
+        <!-- Botón pequeño en esquina inferior derecha -->
+        <a href="admin.html" id="adminBtn">
+            <button type="button">Ingresar como administrador</button>
+        </a>
         <div class="small-link">
             <a href="crear.html">Crear cuenta</a> | <a href="cambiar.html">Cambiar contraseña</a>
         </div>
@@ -43,6 +48,29 @@
             })
             .catch(() => document.getElementById('msgLogin').innerText = 'Error de conexión');
         }
+
+    /* No se necesita función loginAdmin aquí, el botón redirige a admin.html */
     </script>
+    <style>
+        #adminBtn {
+            position: fixed;
+            right: 20px;
+            bottom: 20px;
+            z-index: 1000;
+        }
+        #adminBtn button {
+            font-size: 0.85em;
+            padding: 6px 12px;
+            border-radius: 20px;
+            background: #007bff;
+            color: #fff;
+            border: none;
+            box-shadow: 0 2px 6px #ccc;
+            cursor: pointer;
+        }
+        #adminBtn button:hover {
+            background: #0056b3;
+        }
+    </style>
 </body>
 </html>
